--- a/Automation-App/src/app/dashboard/analytics/analytics.page.html
+++ b/Automation-App/src/app/dashboard/analytics/analytics.page.html
@@ -59,7 +59,8 @@
     ></sensor-graph>
     </div>
   </div>
-  <p *ngIf="!existingSensors" class="text_center" style="color: white">
+  <p *ngIf="!existingSensors && !isLoading" class="text_center" style="color: white">
     No historical data found in this timeframe!
   </p>
+  <p *ngIf="isLoading" class="text_center" style="color: white">Loading historical data graphs...</p>
 </ion-content>
