Pre-master merge saved work

--- a/Automation-App/src/app/dashboard/analytics/analytics.page.html
+++ b/Automation-App/src/app/dashboard/analytics/analytics.page.html
@@ -63,4 +63,5 @@
     No historical data found in this timeframe!
   </p>
   <p *ngIf="isLoading" class="text_center" style="color: white">Loading historical data graphs...</p>
+  <ion-spinner *ngIf="isLoading" class="text_center" color="white"></ion-spinner>
 </ion-content>
