--- a/Automation-App/src/app/dashboard/analytics/analytics.page.html
+++ b/Automation-App/src/app/dashboard/analytics/analytics.page.html
@@ -17,7 +17,7 @@
       >
     </ion-select>
   </ion-item>
-  <div *ngIf="existingSensors">
+  <div *ngIf="existingSensors && !isLoading">
     <div *ngIf="deviceIsFertigation">
       <sensor-graph
         [historicalData]="historicalData"
