--- a/Automation-App/src/app/auth/auth.page.html
+++ b/Automation-App/src/app/auth/auth.page.html
@@ -21,7 +21,7 @@
             <ion-label color='danger'>Should be a valid email address.</ion-label> 
           </ion-item>
           <ion-item>
-            <ion-label position="floating">Password</ion-label>
+            <ion-label position="floating">Password <ion-icon name="lock-closed-outline" class="ion-no-padding"></ion-icon></ion-label>
             <ion-input type="password" formControlName="password"></ion-input>
           </ion-item>
           <ion-item  *ngIf="formgroup.get('password').hasError('message') && !formgroup.controls.password.valid && formgroup.controls.password.touched" lines='none'>
