--- a/Automation-App/src/app/components/sensor-testing/sensor-testing.component.scss
+++ b/Automation-App/src/app/components/sensor-testing/sensor-testing.component.scss
@@ -62,6 +62,8 @@ ion-toggle {
     font-size: 20px;
     color: black;
     font-weight: 600;
+    padding-top: 15px;
+    padding-left: 10px;
 }
 
 .title {
