--- a/Automation-App/src/app/dashboard/testing/testing.page.scss
+++ b/Automation-App/src/app/dashboard/testing/testing.page.scss
@@ -78,3 +78,10 @@ ion-card-header {
 .margin-top {
     margin-top: 20px;
 }
+
+.testOff {
+    color: white;
+    padding-left: 10px;
+    font-size: 140%;
+    text-align-last: center;
+}
