added delete notification and default image to notifications

--- a/Automation-App/src/app/dashboard/notifications/clickedNotifications/clickedNotifications.page.html
+++ b/Automation-App/src/app/dashboard/notifications/clickedNotifications/clickedNotifications.page.html
@@ -1,31 +1,32 @@
 <ion-content class="gradient_background">
-    <div class="content">
-      <ion-toolbar>
-        <ion-icon button (click) = "navigateToTab('notifications')" style="color:white;" name="arrow-back-outline"></ion-icon>
-        <ion-buttons slot="end">
-        </ion-buttons>
-      </ion-toolbar>
-    </div>
-    <h1 class="h2_title">
-      {{notification.notifHeader}} 
-    </h1>
-        
-    <body>    
-       <p style="color:black;">{{notification.notifText}}</p>
-            
-    </body>
+  <div class="content">
+    <ion-toolbar>
+      <ion-icon button (click) = "navigateToTab('notifications')" style="color:white;" name="arrow-back-outline"></ion-icon>
+      <ion-buttons slot="end">
+      </ion-buttons>
+    </ion-toolbar>
+  </div>
+  <h1 class="h2_title">
+    {{notification.notifHeader}} 
+  </h1>
+      
+  <body>     
+     <p class="clickedNotification-text" style="color:black;">{{notification.notifText}}</p>  
+     
+     
+     
+  <div>
+  <img class="image" src="https://www.seekpng.com/png/detail/250-2503958_potted-plants-clipart-transparent-background-plant-logo-free.png" width="200" height="200">
+</div>
+</body>
 
+ 
   
-  
-  
-  
-   
     
-      
-      
-  </ion-content>
     
+</ion-content>
   
+
 
 
 
