--- a/Automation-App/src/app/dashboard/notifications/clickedNotifications/clickedNotifications.page.scss
+++ b/Automation-App/src/app/dashboard/notifications/clickedNotifications/clickedNotifications.page.scss
@@ -23,3 +23,16 @@ ion-select{
     padding-top: 20px;
 }
 
+.image{
+    
+    width: 75%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  
+}
+
+.clickedNotification-text{
+    margin: 10px 10px;
+    
+}
