--- a/Automation-App/src/app/dashboard/notifications/clickedNotifications/clickedNotifications.page.html
+++ b/Automation-App/src/app/dashboard/notifications/clickedNotifications/clickedNotifications.page.html
@@ -9,15 +9,21 @@
   <h1 class="h2_title">
     {{notification.notifHeader}} 
   </h1>
+
+  
+  <body>  
+
+    <div>
+      <img class="image" src="https://www.seekpng.com/png/detail/250-2503958_potted-plants-clipart-transparent-background-plant-logo-free.png" width="200" height="200">
+
       
-  <body>     
-     <p class="clickedNotification-text" style="color:black;">{{notification.notifText}}</p>  
+    </div>   
+    
+     <p class="clickedNotification-text" style="color:black;">{{notification.body}}</p>  
      
      
      
-  <div>
-  <img class="image" src="https://www.seekpng.com/png/detail/250-2503958_potted-plants-clipart-transparent-background-plant-logo-free.png" width="200" height="200">
-</div>
+  
 </body>
 
  
